kubernates/base/flaskdeployment.yaml
apiVersion: apps/v1        # 1. 'appVersion' ko 'apiVersion' kiya aur apps/v1 lagaya
kind: Deployment
metadata: 
  name: flaskdeployement
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec: 
      containers:
        - name: flask-app
          image: shahiddevops1/flask-todo-app:latest # 2. Image ka tag ':latest' lagana behtar hota hai
          ports:
            - containerPort: 5000                   # 3. 'containersport' ko 'containerPort' kiya (P aur C capital/small sahi kiya)
