kubernates/base/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            # Container ke andar ka folder jahan MySQL data save karta hai
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        # Aapka purana Hard Disk wala PVC yahan connect ho gaya
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mylocalpvc
